--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "@babel/runtime": "7.0.0-beta.46"
   }
 }
